# bebop2_drl_landing

./: README.md
Gazebo_3Dmodels/room/: model.config  model.sdf
Gazebo_3Dmodels/room/meshes/: room.dae
Gazebo_3Dmodels/vision_landing_platform/: model.config  model.sdf
Gazebo_3Dmodels/vision_landing_platform/materials/scripts/: aruco0.material  aruco1.material  aruco2.material  aruco3.material  aruco4.material  aruco5.material  aruco6.material  aruco7.material  aruco8.material
Plugins/autolanding_high_speed_plugin/: animated_platform.cc
Plugins/autolanding_low_speed_plugin/: animated_platform.cc
Plugins/autolanding_medium_speed_plugin/: CMakeLists.txt  animated_platform.cc
Worlds/: empty_with_platform.world  room_with_platform.world
bebop_autonomy_modification/: bebop_follower_node.launch  bebop_leader_node.launch
bebop_dronemsgsros/: CMakeLists.txt  package.xml
bebop_dronemsgsros/src/: bebop_dronemsgsros.cpp
bebop_keyboard/: CMakeLists.txt  package.xml
bebop_keyboard/scripts/: bebop_follower_keyboard.py  bebop_leader_keyboard.py
collision_avoid/: CMakeLists.txt  package.xml
collision_avoid/cfg/: PID.cfg
collision_avoid/msg/: msgData.msg
collision_avoid/src/: collision_avoid.cpp
drl-landing_modified/Environment/: CMakeLists.txt  package.xml
drl-landing_modified/Environment/cmake/Modules/: FindAruco.cmake
drl-landing_modified/Environment/launch/: rlEnvironmentGazeboROSLandingWithRPdYdAPE_marker_real.launch
drone_files/: bebop_follower.drone  bebop_leader.drone
opencv_aruco_install/: install_aruco.sh
(+2 files in other folders)
